; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/serial_link/system/extr_serial_link.c_send_data.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/serial_link/system/extr_serial_link.c_send_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DOWN_LINK = common dso_local global i64 0, align 8
@SD1 = common dso_local global i32 0, align 4
@SD2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_data(i64 %0, i64* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @DOWN_LINK, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i64*, i64** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @sdWrite(i32* @SD1, i64* %11, i32 %12)
  br label %18

14:                                               ; preds = %3
  %15 = load i64*, i64** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @sdWrite(i32* @SD2, i64* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %10
  ret void
}

declare dso_local i32 @sdWrite(i32*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
